syntax = "proto3";

package api.shop.interface.v1;

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

option go_package = "imperialPalaceMall/api/shop/interface/v1;v1";
option java_multiple_files = true;
option java_package = "api.shop.interface.v1";

service ShopInterface {
	rpc ListCategory (ListCategoryRequest) returns (ListCategoryReply){
		option (google.api.http) = {
			get: "/v1/categories"
		};
	};
	rpc GetGoods (GetGoodsRequest) returns (GetGoodsReply) {
		option (google.api.http) = {
			get: "/v1/goods/{id}"
		};
	};
	rpc ListGoods (ListGoodsRequest) returns (ListGoodsReply) {
		option (google.api.http) = {
			get: "/v1/goods"
		};
	};
	rpc GetSKUs (GetSKUsRequest) returns (GetSKUsReply) {
		option (google.api.http) = {
			get: "/v1/goods/{id}/sku"
		};
	};
	rpc WxLogin (WxLoginRequest) returns (WxLoginReply) {
		option (google.api.http) = {
			post: "/v1/wx/login"
			body: "*"
		};
	};
	rpc AddCart (AddCartRequest) returns (AddCartReply){
		option (google.api.http) = {
			put: "/v1/user/my/cart",
			body: "*"
		};
	};
	rpc GetMyCart (GetMyCartRequest) returns (GetMyCartReply) {
		option (google.api.http) = {
			get: "/v1/user/my/cart"
		};
	};
	rpc UpdateCartNum (UpdateCartNumRequest) returns (UpdateCartNumReply) {
		option (google.api.http) = {
			put: "/v1/user/my/cart/{id}",
			body: "*"
		};
	};
	rpc RemoveCartItems (RemoveCartItemsRequest) returns (RemoveCartItemsReply) {
		option (google.api.http) = {
			delete: "/v1/user/my/cart/{ids}",
		};
	};
	rpc GetAddress (GetAddressRequest) returns (GetAddressReply) {
		option (google.api.http) = {
			get: "/v1/user/my/address",
		};
	};
	rpc SaveAddress (SaveAddressRequest) returns (SaveAddressReply) {
		option (google.api.http) = {
			post: "/v1/user/my/address",
			body: "*"
		};
	};
}

message Category {
	int64  id = 1;
	string category_name = 2;
}

message ListCategoryRequest {}
message ListCategoryReply {
	repeated Category categories = 1;
}

message GoodsInfo {
	int64 id = 1;
	int32 kind = 2;
	string content = 3;
}

message GoodsSimplify {
	int64  id = 1;
	string spu_no = 2;
	string goods_name = 3;
	double start_price = 4;
	int64 category_id = 5;
	int64 brand_id = 6;
	GoodsInfo info = 7;
}

message GoodsDetail {
	int64  id = 1;
	string spu_no = 2;
	string goods_name = 3;
	string goods_desc = 4;
	double start_price = 5;
	int64 category_id = 6;
	int64 brand_id = 7;
	repeated GoodsInfo infos = 8;
}

message Metadata {
	int64 current_page = 1;
	int64 page_size = 2;
	int64 first_page = 3;
	int64 last_page = 4 ;
	int64 total_records = 5;
}

message GetGoodsRequest {
	google.protobuf.Int64Value id = 1  [(validate.rules).int64 = {gt: 0}, (validate.rules).message.required = true];
}
message GetGoodsReply {
	GoodsDetail goods = 1;
}

message ListGoodsRequest {
	int64 category_id = 1 [(validate.rules).int64 = {ignore_empty: true, gt: 0}];
	int64 page = 2 [(validate.rules).int64 = {ignore_empty: true, gt: 0, lte: 10000000}];
	int64 page_size = 3 [(validate.rules).int64 = {ignore_empty: true, gt: 0, lte: 100}];
}
message ListGoodsReply {
	repeated GoodsSimplify goods_list = 1;
	Metadata metadata = 2;
}

message GetSKUsRequest {
	google.protobuf.Int64Value id = 1  [(validate.rules).int64 = {gt: 0}, (validate.rules).message.required = true];
}

message    GetSKUsReply {
	repeated GoodsSKU skus = 1;
	repeated GoodsAttr attrs = 2;
}

message GoodsSKU {
	int64 id = 1;
	int64 goods_id = 2;
	repeated int64 goods_attr_path = 3;
	int64 price = 4;
	int64 stock = 5;
}

message GoodsAttr {
	int64 id = 1;
	int64 goods_id = 2;
	string attr_key = 3;
	repeated    GoodsAttrValue attr_values = 4;
}

message GoodsAttrValue {
	int64 id = 1;
	int64 attr_key_id = 2;
	string attr_value = 3;
}

message WxLoginRequest {
	string code = 1 [(validate.rules).string = {min_len: 5}];
	string encrypted_data = 2 [(validate.rules).string = {min_len: 10}];
	string iv = 3 [(validate.rules).string = {min_len: 5}];
	bool session_is_valid = 4;
}

message WxLoginReply {
	string token = 1;
}

message AddCartRequest {
	google.protobuf.Int64Value goods_id = 1 [(validate.rules).int64 = {gt: 0}, (validate.rules).message.required=true];
	google.protobuf.Int64Value goods_sku_id = 2 [(validate.rules).int64 = {gt: 0}, (validate.rules).message.required=true];
	string goods_sku_desc = 3 [(validate.rules).string = {min_len: 1, max_len: 50}];
}

message Cart {
	int64 id = 1;
	int64 user_id = 2;
	int64 goods_id = 3;
	int64 goods_sku_id = 4;
	string goods_sku_desc = 5;
	int32 num = 6;
}

message AddCartReply {
	Cart cart = 1;
}

message GetMyCartRequest {
}

message GetMyCartReply {
	message CartItem {
		// cart info
		int64 cart_id = 1;
		int64 goods_sku_id = 2;
		int64 goods_id = 3;
		int32 num = 4;
		string goods_sku_desc = 5;
		// goods
		string goods_name = 6;
		string goods_desc = 7;
		string goods_image = 8;
		// goods_sku
		int64 price = 9;
		int64 stock = 10;
		repeated int64 goods_attr_path = 11;
	}
	repeated CartItem items = 1;
}

message UpdateCartNumRequest {
	google.protobuf.Int64Value id = 1 [(validate.rules).int64 = {gt: 0}, (validate.rules).message.required=true];
	google.protobuf.Int32Value num = 2 [(validate.rules).int32 = {gt: 0}, (validate.rules).message.required=true];
}

message UpdateCartNumReply {
	int64 affected = 1;
}

message RemoveCartItemsRequest {
	string ids = 1 [(validate.rules).string = {min_len: 1, max_len: 200}];
}

message RemoveCartItemsReply {
	int64 affected = 1;
}

message Address {
	int64 id = 1;
	int64 user_id = 2;
	string user_name = 3;
	string tel = 4;
	repeated string region = 5;
	string detail_info = 6;
	string post_code = 7;
}

message		GetAddressRequest {}

message GetAddressReply {
	repeated Address addresses = 1;
}

message SaveAddressRequest {
	string user_name = 1 [(validate.rules).string = {min_len: 1}];
	string tel = 2 [(validate.rules).string = {min_len: 8}];
	repeated string region = 3 [(validate.rules).repeated = {min_items: 2}];
	string detail_info = 4 [(validate.rules).string = {min_len: 4}];
	string post_code = 5 [(validate.rules).string = {ignore_empty: true, min_len: 6}];
}

message SaveAddressReply {
	int64 id = 1;
}